--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,3 +74,11 @@ add_executable(pcc
         generator/arm64/internal_func_arm64.cpp
         generator/arm64/internal_func_arm64.h
 )
+
+add_custom_command(
+        TARGET pcc POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy_directory
+        ${CMAKE_SOURCE_DIR}/include
+        ${CMAKE_BINARY_DIR}/include
+        COMMENT "Copying include directory to build output"
+)
